--- a/index.css
+++ b/index.css
@@ -50,7 +50,7 @@ nav{ /* make nav bar the  30% of the width of its parents always*/
 (   2px + 1.5vw);
 }
 main{
-    width : 70%; /* fill in the other 70% */
+    width : 100%; /* fill in the other 70% */
     display: flex;
     flex-direction: row; /* the main content is now alligned in a row */
     background-color:  #f0f4f8;;
@@ -205,13 +205,43 @@ ul li{  /* make the navigation bar, edit borders, font size, and make spacious*/
     #skills-inner h2{
         padding: 2vh;
     }
-    #skills-inner ul li{
-        border : none;
+    #skills-inner ul li {
+        border: none;
         background-color: transparent;
         border-left: solid red 5px;
         font-size: calc(5px + 2vh);
 
     }
+/* contacts start here */
+    #contact-inner table {
+        width: 100%;
+        margin: 0 auto;
+        font-size: calc(5px + 2vw);
+        background-color: lightblue;
+        padding-top: 2vh;
+        padding-bottom: 2vh;
+    }
+    #contact-inner table td{
+       padding: 1vh;
+        border-color: steelblue;
+        border-style: solid;
+        border-width: 3px;
+
+    }
+
+    #contact-inner {
+        display: flex;
+        flex-direction: column;
+        width: 95%;
+        text-align: center;
+        padding-top: 3px;
+        padding-bottom: 0;
+        margin: 0 auto;
+    }
+    #contact-inner h3{
+        padding: 2vh;
+    }
+
 
 
 
