--- a/projects.css
+++ b/projects.css
@@ -1,18 +1,60 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family:  "Gill Sans", "Arial", sans-serif, "helavetica";
+}
 body {
     background-image: url('src/Star-wars-logo-new-tall.webp');
     background-position: center;
-    background-size: cover;
-    background-attachment: fixed;
-    max-width: 100%;
 
+    background-attachment: flex;
+    max-width: 100%;
 }
 p{
-    text-align: center;
+
+    font-size: calc(3px + 10vh);
+    color: #4f4ff1;
+
+    margin-left: 30vw;
+
 }
-h1{
-    color: gold;
+#output-box {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+#output-table {
+    border: 4px solid royalblue;
+    padding: 2vh 3vw;
+    background-color: white;
+
+
+}
+
+#output {
+    margin: 0;
     text-align: center;
-    font-size: calc(10px + 5vh);
+    font-size: calc(2vh + 2vw);
+    color: black;
+}
+
+
+
+
+#outputsep{
+  display: flex;
+    flex-direction: row;
+
+
+}
+h1 {
+    color: gold;
+    font-size: calc(10px + 10vh);
+    text-align: center;
+   margin: 30vh 2vw;
 }
 #user label{
     align-items: center;
@@ -31,21 +73,14 @@ input{
     flex-direction: row;
     align-items: center;
 }
-#wrapper{
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: flex-start;
-}
+
 #ops button{
     width: 6vh;
     height: 6vh;
     margin: 2vh 2vw;
     font-size: calc(2px + 2vh);
 }
-#ops{
-    justify-content: left;
-}
+
 button{
     margin: 2vh 2vw;
     width: 20vw;
@@ -53,10 +88,7 @@ button{
     font-size: calc(2px + 2vh);
     color: royalblue;
 }
-p{
-    font-size: calc(2px + 10vh);
-    color: #4f4ff1;
-}
+
 
 
 
